testing/fail-lbnf/nullable-token.cf
Foo. Main ::= Identifier;

token Identifier letter* (letter+ | digit+)* ;  -- nullable, that an ERROR
